--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -153,4 +153,8 @@
 
     <!-- Additional buttons -->
     <string name="additional_buttons_title">Additional buttons</string>
+
+    <!-- Three-fingers-swipe to screenshot -->
+    <string name="three_finger_gesture">Swipe to screenshot</string>
+    <string name="three_finger_gesture_summary">Swipe down with three fingers to take a screenshot</string>
 </resources>
