--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -250,4 +250,8 @@
     <string name="hide_from_launcher_summary">
         Prevent this application from showing up in launcher. Requires a launcher restart for changes to take effect.
     </string>
+
+    <!-- Full screen apps -->
+    <string name="display_cutout_force_fullscreen_title">Full screen apps</string>
+    <string name="display_cutout_force_fullscreen_summary">Allow apps to display beyond device cutout</string>
 </resources>
