Settings: Expose radio info (*#*#4636#*#*)
idoybh edits: Move to about phone in settings

Signed-off-by: Omkar Chandorkar <gotenksIN@aosip.dev>
Change-Id: I7cf1ee8685749212ddeee9b4e7135af3185f78b8
Signed-off-by: DarkJoker360 <simoespo159@gmail.com>

* Squashed with:

Settings: Hide radio info if device don't support voice

Change-Id: I481485b2563fdb27b35b31fa95795db94a863f2f
Signed-off-by: LynnrinChan <lynnrin@lynnrin.moe>
Co-authored-by: LynnrinChan <lynnrin@lynnrin.moe>

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -201,4 +201,7 @@
     <!-- Hardware info -->
     <string name="soc_model">SoC</string>
     <string name="total_ram">RAM</string>
+
+    <!-- Radio Info -->
+    <string name="radio_info_title">Radio info</string>
 </resources>
