Settings: Double tap to trigger doze [2/2]
* Also adapt Add video to Double tap to trigger doze from Pie: a66601a

* pnplusplus: Make it just switch that placed in display settings and below tap to wake

Change-Id: Id98543542db937c6cc1f176cd55f6b02e472849d

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -273,4 +273,6 @@
     <string name="doze_gesture_ambient_summary">Override wake device with ambient display</string>
     <string name="gesture_wake_ambient">Show ambient display</string>
     <string name="gesture_wake">Wake device</string>
+    <string name="doze_double_tap_title">@string/ambient_display_tap_screen_title</string>
+    <string name="doze_double_tap_summary">Double-tap anywhere on the screen to show ambient display</string>
 </resources>
