Hide app feature
Allow users to uninstall apps while preserving data.
All apps can be "un-hidden" by updating/reinstalling them. Otherwise for:
 * System apps
   - Personal profile: Settings -> Apps -> All Apps -> Show system -> Select app -> Unhide
   - Work profile: Settings -> System -> Multiple Users -> Select profile -> App & content access -> Select app -> Unhide
 * Third-party apps:
   - Personal profile: Settings -> Apps -> All Apps -> Select app -> Unhide
   - Work profile: Settings -> System -> Multiple Users -> Select profile -> App & content access -> Select app -> Unhide

For further improvements, consider adding more restrictions on top of https://developer.android.com/training/package-visibility

Issue: calyxos#623
Change-Id: I79d2d4e1e1f5f07d70d625d21ace3e4606165c4f

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -275,4 +275,8 @@
     <string name="gesture_wake">Wake device</string>
     <string name="doze_double_tap_title">@string/ambient_display_tap_screen_title</string>
     <string name="doze_double_tap_summary">Double-tap anywhere on the screen to show ambient display</string>
+
+    <!-- Hide apps -->
+    <string name="hide">Archive</string>
+    <string name="unhide">Restore</string>
 </resources>
