Settings: Add a preference to battery optimization page
* rather than going to apps one by one, this preference allows users to open the page where it'll list all apps with filters and stuff.

Change-Id: I494bc6a9a5f8fd6c4039cfcab93a94621d2cc823
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -204,4 +204,7 @@
 
     <!-- Radio Info -->
     <string name="radio_info_title">Radio info</string>
+
+    <!-- Battery optimization -->
+    <string name="high_power_apps_summary">Control battery usage for each apps</string>
 </resources>
