Settings: support per-app volume [3/3]
Change-Id: Idde059f1ad96aecff0f10e2e9f9b88ff211b80ef
Signed-off-by: saikiran2001 <bjsaikiran@gmail.com>

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -189,4 +189,9 @@
     <!-- Force LTE_CA -->
     <string name="force_lte_ca">LTE carrier aggregation</string>
     <string name="force_lte_ca_summary">Increase data peak rate</string>
+
+    <!-- Per-app volume control -->
+    <string name="app_volume">Apps volume</string>
+    <string name="app_volume_title">@string/app_volume</string>
+    <string name="app_volume_summary">Set volume levels for each app</string>
 </resources>
