Settings: Allow setting wake for notification separately from doze [2/2]
The strings were misleading. Disabling wake for notifications actually entirely disables doze.
Add a new setting to configure wake for notification separately and amend doze switch strings accordingly

* pnplusplus: Drop doze enablement settings

Change-Id: I27ddd58e3d7bfc6cb9efebf0bc74543407dc73ff

--- a/res/xml/security_lockscreen_settings.xml
+++ b/res/xml/security_lockscreen_settings.xml
@@ -139,11 +139,11 @@
             settings:searchable="false"
             settings:controller="com.android.settings.gestures.ScreenOffUdfpsPreferenceController" />
 
-        <SwitchPreference
-            android:key="ambient_display_notification"
+        <lineageos.preference.SecureSettingSwitchPreference
+            android:key="doze_for_notifications"
             android:title="@string/doze_title"
             android:summary="@string/doze_summary"
-            settings:controller="com.android.settings.display.AmbientDisplayNotificationsPreferenceController" />
+            android:defaultValue="true" />
 
         <lineageos.preference.RemotePreference
             android:key="doze_device_settings"
