Settings: Show SoC Model rather than value of ro.board.platform if available
* These properties were introduced in S, so why not use them?

Change-Id: I2abb584e140841c03f8daa7cc6c0107f24a0e234

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -199,6 +199,6 @@
     <string name="status_sleep_time">Deep sleep</string>
 
     <!-- Hardware info -->
-    <string name="platform_revision">Platform</string>
-    <string name="total_ram">Total RAM</string>
+    <string name="soc_model">SoC</string>
+    <string name="total_ram">RAM</string>
 </resources>
