--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -185,4 +185,8 @@
     <string name="custom_timeout_summary_30mins">30 minutes</string>
     <string name="custom_timeout_summary_1hour">1 hour</string>
     <string name="custom_timeout_summary_2hours">2 hours</string>
+
+    <!-- Force LTE_CA -->
+    <string name="force_lte_ca">LTE carrier aggregation</string>
+    <string name="force_lte_ca_summary">Increase data peak rate</string>
 </resources>
