Settings: Hide ADB and developer setting enable status [2/2]
* Code is adapted from cutout force full screen
* Give authorship

Co-authored-by: LuK1337 <priv.luk@gmail.com>
Co-authored-by: Tony Mantler <nicoya@google.com>
Co-authored-by: jhenrique09 <jhsv09@gmail.com>
Co-authored-by: jhonboy121 <alfredmathew05@gmail.com>
Co-authored-by: cjh1249131356 <cjh1249131356@gmail.com>
Co-authored-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Change-Id: I2e6e42e00d0d54b8f9b81fcf431b034526b24f34
Signed-off-by: someone5678 <nemui3353@gmail.com>

--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -217,4 +217,10 @@
     <string name="battery_charge_cycles_title">Charge cycles</string>
     <string name="battery_charge_cycles_summary">This is the number of times the battery has been charged. It is a measure of how long the battery has been in use.</string>
     <string name="keywords_battery_health">battery, health, charge, cycles, capacity</string>
+
+    <!-- Hide developer status -->
+    <string name="hide_developer_status_title">Shielded apps</string>
+    <string name="hide_developer_status_summary">Deny apps to access developer options</string>
+    <string name="search">Search</string>
+    <string name="search_apps">@string/search</string>
 </resources>
