--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -20,4 +20,20 @@
     <string name="extra_number_title">Kusuma number</string>
     <string name="extra_codename_title">Kusuma codename</string>
     <string name="base_lineage_version_title">Base LineageOS version</string>
+
+    <!-- Status bar icons -->
+    <string name="category_name_status_bar_display">Status bar</string>
+    <string name="status_bar_system_icons_title">Status bar icons</string>
+    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
+
+    <!-- Quick pulldown -->
+    <string name="status_bar_quick_qs_pulldown_title">Quick pulldown</string>
+    <string name="quick_pulldown_category_title">Quickly access Quick Settings with swipe down status bar from</string>
+    <string name="quick_pulldown_hint_title">Swipe down status bar with two finger will always quickly access Quick Settings</string>
+    <string name="status_bar_quick_qs_pulldown_summary">%1$s edge</string>
+    <string name="status_bar_quick_qs_pulldown_summary_left">Left</string>
+    <string name="status_bar_quick_qs_pulldown_summary_right">Right</string>
+    <string name="status_bar_quick_qs_pulldown_off">None</string>
+    <string name="status_bar_quick_qs_pulldown_left">Left edge</string>
+    <string name="status_bar_quick_qs_pulldown_right">Right edge</string>
 </resources>
