--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -57,6 +57,17 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:title="@string/category_name_status_bar_display">
+
+        <Preference
+            android:key="status_bar_icons"
+            android:title="@string/status_bar_system_icons_title"
+            android:summary="@string/status_bar_system_icons_summary">
+            <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
+        </Preference>
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:title="@string/category_name_appearance">
 
         <com.android.settings.display.darkmode.DarkModePreference
