--- a/res/values/extra_strings.xml
+++ b/res/values/extra_strings.xml
@@ -36,4 +36,121 @@
     <string name="status_bar_quick_qs_pulldown_off">None</string>
     <string name="status_bar_quick_qs_pulldown_left">Left edge</string>
     <string name="status_bar_quick_qs_pulldown_right">Right edge</string>
+
+    <!-- Quick torch -->
+    <string name="torch_long_press_power_gesture_title">Quick torch</string>
+    <string name="torch_long_press_power_gesture_desc">To quickly flash the camera light when screen is off, long press the power button</string>
+    <string name="torch_long_press_power_timeout_title">Torch timeout</string>
+    <string name="torch_long_press_power_timeout_never">Never</string>
+    <string name="torch_long_press_power_timeout_1min">1 minute</string>
+    <string name="torch_long_press_power_timeout_2min">2 minutes</string>
+    <string name="torch_long_press_power_timeout_5min">5 minutes</string>
+    <string name="torch_long_press_power_timeout_10min">10 minutes</string>
+
+    <!-- Playback control -->
+    <string name="volbtn_music_controls_title">Playback control</string>
+    <string name="volbtn_music_controls_summary">To switch media when screen is off, long press the volume button</string>
+    <string name="volbtn_music_controls_summary_disabled">To enable, first change volume button wake device to disabled </string>
+
+    <!-- Partial screenshot -->
+    <string name="click_partial_screenshot_title">Partial screenshot</string>
+    <string name="click_partial_screenshot_summary">Short click Volume Down and Power to take partial screenshot</string>
+
+    <!-- Power menu -->
+    <string name="category_name_global_actions_display">Global actions</string>
+    <string name="power_menu_title">Global action items</string>
+    <string name="power_menu_summary">Control which global action items are shown</string>
+    <string name="power_menu_screenshot_title">Screenshot</string>
+    <string name="power_menu_screenshot_summary">Long-press for partial screenshot</string>
+    <string name="power_menu_airplane_title">Airplane mode</string>
+    <string name="power_menu_users_title">User switcher</string>
+    <string name="power_menu_bug_report_title">Bug report</string>
+    <string name="power_menu_bug_report_devoptions_unavailable">Bug reporting is disabled as development settings aren\'t enabled</string>
+    <string name="power_menu_bug_report_unavailable_for_user">Bug reporting is disabled for non-primary users</string>
+    <string name="power_menu_emergency_title">Emergency</string>
+    <string name="power_menu_devicecontrols_title">Device controls</string>
+    <string name="power_menu_advanced_restart_title">Advanced restart</string>
+    <string name="power_menu_advanced_restart_summary">When unlocked, include options in the power menu for restarting into recovery or bootloader</string>
+    <string name="power_menu_emergency_affordance_enabled">Emergency affordance is enabled</string>
+
+    <!-- Calling button accessibility-->
+    <string name="home_answer_call_title">Home button answer call</string>
+    <string name="volume_answer_call_title">Volume button answer call</string>
+
+    <!-- Waking button accessibility -->
+    <string name="volume_button_wake_title">Volume button wake device</string>
+    <string name="home_button_wake_title">Home button wake device</string>
+    <string name="back_button_wake_title">Back button wake device</string>
+    <string name="menu_button_wake_title">Menu button wake device</string>
+    <string name="assist_button_wake_title">Assist button wake device</string>
+    <string name="app_switch_button_wake_title">Recents button wake device</string>
+
+    <!-- Navigation bar -->
+    <string name="navigation_bar_invert_layout_title">Alternative order</string>
+    <string name="navigation_bar_invert_layout_summary">Use alternative button navigation order</string>
+    <string name="navigation_bar_back_long_press_title">Back long press action</string>
+    <string name="navigation_bar_home_long_press_title">Home long press action</string>
+    <string name="navigation_bar_home_double_tap_title">Home double tap action</string>
+    <string name="navigation_bar_app_switch_long_press_title">Recents long press action</string>
+
+    <!-- Hardware key rebinding -->
+    <string name="hardware_keys_action_nothing">No action</string>
+    <string name="hardware_keys_action_menu">Open/close menu</string>
+    <string name="hardware_keys_action_app_switch">Recent apps switcher</string>
+    <string name="hardware_keys_action_search">Search assistant</string>
+    <string name="hardware_keys_action_voice_search">Voice search</string>
+    <string name="hardware_keys_action_in_app_search">In-app search</string>
+    <string name="hardware_keys_action_launch_camera">Launch camera</string>
+    <string name="hardware_keys_action_sleep">Turn screen off</string>
+    <string name="hardware_keys_action_last_app">Last app</string>
+    <string name="hardware_keys_action_split_screen">Split screen</string>
+    <string name="hardware_keys_action_kill_app">Kill foreground app</string>
+
+    <!-- Taskbar -->
+    <string name="navigation_bar_enable_taskbar_title">Taskbar</string>
+    <string name="navigation_bar_enable_taskbar_summary">Quickly launch apps from system navigation</string>
+    <string name="navigation_bar_enable_taskbar_disabled_gesture">To enable, first change navigation mode to the gesture navigation</string>
+    <string name="navigation_bar_enable_taskbar_disabled_button">To enable, first change navigation mode to the 3-button navigation</string>
+
+    <!-- Gesture navigation -->
+    <string name="navigation_bar_edge_long_swipe_title">Edge long swipe action</string>
+
+    <!-- Physical button navigation -->
+    <string name="physical_button_navigation_title">Physical button navigation</string>
+    <string name="physical_button_navigation_summary">Go back, Home, and switch apps with physical button.</string>
+    <string name="hardware_keys_back_long_press_title">@string/navigation_bar_back_long_press_title</string>
+    <string name="hardware_keys_home_long_press_title">@string/navigation_bar_home_long_press_title</string>
+    <string name="hardware_keys_home_double_tap_title">@string/navigation_bar_home_double_tap_title</string>
+    <string name="hardware_keys_menu_short_press_title">Menu tap action</string>
+    <string name="hardware_keys_menu_long_press_title">Menu long press action</string>
+    <string name="hardware_keys_assist_short_press_title">Search tap action</string>
+    <string name="hardware_keys_assist_long_press_title">Search long press action</string>
+    <string name="hardware_keys_app_switch_short_press_title">Recents tap action</string>
+    <string name="hardware_keys_app_switch_long_press_title">@string/navigation_bar_app_switch_long_press_title</string>
+    <string name="swap_capacitive_keys_title">Alternative order</string>
+    <string name="swap_capacitive_keys_summary">Use alternative physical button navigation order</string>
+
+    <!-- Key backlight -->
+    <string name="button_backlight_title">Backlight</string>
+    <string name="button_backlight_enabled">Illuminate buttons</string>
+    <string name="button_backlight_only_when_pressed_title">Illuminate buttons only when pressed</string>
+    <string name="keyboard_backlight_enabled">Illuminate keyboard</string>
+    <string name="button_backlight_seekbar_title">Button brightness</string>
+    <string name="keyboard_backlight_seekbar_title">Keyboard brightness</string>
+    <string name="backlight_timeout_title">Illumination timeout</string>
+    <string name="backlight_timeout_unlimited">Don\'t turn off</string>
+    <string name="backlight_summary_disabled">Disabled</string>
+    <string name="backlight_summary_enabled_with_timeout">Enabled for <xliff:g id="timeout">%s</xliff:g></string>
+    <string name="backlight_summary_enabled">Enabled</string>
+    <string name="reset">Reset</string>
+
+    <!-- Camera button -->
+    <string name="hardware_keys_camera_key_title">Camera button</string>
+    <string name="camera_sleep_on_release_title">Screen peek</string>
+    <string name="camera_sleep_on_release_summary">A half press will keep the screen on only while the button is held down</string>
+    <string name="camera_launch_title">Launch camera</string>
+    <string name="camera_launch_summary">A longpress and release will launch camera</string>
+
+    <!-- Additional buttons -->
+    <string name="additional_buttons_title">Additional buttons</string>
 </resources>
