--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -163,7 +163,7 @@
 
     <!-- Wake on plug -->
     <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
-    <string name="wake_when_plugged_or_unplugged_summary">Turn the screen on when connecting or disconnecting a power source</string>
+    <string name="wake_when_plugged_or_unplugged_summary">Wake device when connecting or disconnecting a power source</string>
 
     <!-- FastCharge feature -->
     <string name="fast_charging_title">Fast charging</string>
